--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,16 @@
 		 	<groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>4.3.14.RELEASE</version>
+		</dependency>
+		<dependency>
+		  	<groupId>com.googlecode.json-simple</groupId>
+		  	<artifactId>json-simple</artifactId>
+		  	<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
